updated to mongoose

--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-
-USER=aqsa
-PASSWORD=aqsa1234
-DATABASE=banking_system
-BD_PORT=3306
-HOST=localhost
+mongo_db="mongodb+srv://aqsa1234:aqsa1234@project1.iup0w.mongodb.net/GRIPTASK-01?retryWrites=true&w=majority"
